# DistRescal

./: .gitignore  CMakeLists.txt  README.md
alg/: H2_Assigner.h  H2_Optimizer.h  MarginBasedOptimizer.h  Margin_multithread.h  Naive_Optimizer.h  Optimizer.h  Para_Optimizer.h  PreBatchAssigner.h  PreBatchAssigner_RelOnly.h  PreBatchAssigner_full.h  Prebatch_Optimizer.h  Prebatch_full_Optimizer.h  Prebatch_rel_Optimizer.h  RESCAL_ASYNC.h  RESCAL_BATCH.h  RESCAL_BLOCK.h  RESCAL_H2.h  RESCAL_LOCK.h  RESCAL_NAIVE.h  RESCAL_NAIVE_mt.h  RESCAL_NLL.h  RESCAL_NOLOCK.h  RESCAL_PARA.h  RESCAL_POS.h  RESCAL_PREBATCH.h  RESCAL_PREBATCH_REL.h  RESCAL_Prebatch_full.h  Sampler.h  TransE_Lock.h  TransE_Naive.h  TransE_Prebatch.h  TransE_Prebatch_full.h  TransE_Prebatch_rel.h  splitEntity.h
data/: round.txt
hpc_scripts/: genScriptLock.py  rescal_lock_FB13.cmd  rescal_lock_wn11.cmd  rescal_naive_FB13.cmd  rescal_naive_wn11.cmd  test_metis.cmd  transe_debug_FB13.cmd  transe_debug_WN11.cmd  transe_lock_FB13.cmd  transe_lock_wn11.cmd  transe_naive_FB13.cmd  transe_naive_wn11.cmd
include/alg/: MarginBasedOptimizer.h  MyOptimizer.h  Optimizer.h  RESCAL_LOCK.h  RESCAL_NAIVE.h  RESCAL_RANK.h  Sampler.h
include/struct/: Triple.h  Tuple.h  Weight.h
include/util/: Base.h  Calculator.h  CompareUtil.h  Data.h  EvaluationUtil.h  FileUtil.h  LRUtil.h  Parameter.h  RandomUtil.h  ThreadUtil.h
scripts/: argument.txt  printHistogram.py  runRESCAL_LOCK.sh  runRESCAL_NAIVE.sh  runTestMpi.sh
src/: runMetisPreprocess.cpp  runPrintStatistics.cpp  runRESCAL_ASYNC.cpp  runRESCAL_BATCH.cpp  runRESCAL_BLOCK.cpp  runRESCAL_H2.cpp  runRESCAL_LOCK.cpp  runRESCAL_NAIVE.cpp  runRESCAL_NAIVE_mt.cpp  runRESCAL_NLL.cpp  runRESCAL_NOLOCK.cpp  runRESCAL_PARA.cpp  runRESCAL_POS.cpp  runRESCAL_PREBATCH.cpp  runRESCAL_PREBATCH_FULL.cpp  runRESCAL_PREBATCH_REL.cpp  runRESCAL_RANK.cpp  runTRANSE_LOCK.cpp  runTRANSE_NAIVE.cpp  runTRANSE_PREBATCH.cpp  runTRANSE_PREBATCH_full.cpp  runTRANSE_PREBATCH_rel.cpp  testConditionVariable.cpp  testMPI.cpp  testMatrixProduct.cpp  testScheduler.cpp  testSplitEntity.cpp  testThreadPool.cpp
struct/: Batch.h  Bucket.h  DependancyGraph.h  SHeap.h  Sample.h  Samples.h  Scheduler.h  Scheduler2.h  Triple.h  Tuple.h
util/: Base.h  Calculator.h  CompareUtil.h  Data.h  EvaluationUtil.h  FileUtil.h  Monitor.h  Parameter.h  RandomUtil.h  Sync.h
